--- a/index.html
+++ b/index.html
@@ -310,19 +310,16 @@
                 Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
               </li>
               <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+                Worked on three blockchain projects DeFi yield farming app, NFT MarketPlace, Crosschan token transfer in polygon.
               </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
+              <li>Made smart contract added automated marketmaker for yield farming, added price oracle to fetch real time value of tokens, react app with web3 integration.</li>
+              <li>Made smart contract, deployed over ropsten testnet, audited the code using slither,echidna,manticore,solhint, made reactjs application and integrated using web3/etherjs .</li>
               <li>
-                <b>Tools:</b> Python, Flask, MongoDB
+                <b>Tools:</b> Solidity, Truffle, Hardhat, etherjs, web3js, Reactjs.
               </li>
             </ul>
           </div>
-          <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
-          </div>
+
         </div>
 
         
