--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Blockchain developer", "Web Developer","Writer" "Fast Learner",],
+      strings: ["Blockchain developer", "Web Developer","Writer","Fast Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
