--- a/index.html
+++ b/index.html
@@ -844,22 +844,22 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://jspiders.com/" target="_blank" class="teal-text hoverline">Jspider</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">BTM, Bangalore</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Training: </b>Full stack web development training      
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>Grade: </b>A
                 </p>
 
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Data struture and algorithm</li>
+                    <li>Java</li>
+                    <li>Spring</li>                    
                   </ul>
                   </p>
 
@@ -873,14 +873,13 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="http://www.sinhgad.edu/" target="_blank" class="teal-text hoverline">SMT kashibai college of engineering </a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Pune, MH, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Technology in Computer science
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>CGPA: </b>6/10
                 </p>
 
                 <ul>
@@ -889,7 +888,7 @@
                   <ul>
                     <li>Data Structures and Algorithms</li>
                     <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
+                    <li>Compueter Architecture</li>
                     <li>Machine Learning</li>
                     <li>Computer Vision</li>
                   </ul>
@@ -910,27 +909,27 @@
         <p>
           <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Varad">+918210693760</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Varad" href="mailto:itssunny322@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:itssunny322@gmail.com"
+              class="hoverline">itssunny322@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Varad on GitHub" href="http://github.com/itssunny322" target="_blank"
+            data-position="top" data-tooltip="View Sunny on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Varad on Github" href="http://github.com/itssunny322" class="hoverline"
+              target="_blank">github.com/itssunny322</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/sunny-sourav-81a992192" target="_blank"
+            data-position="top" data-tooltip="View Sunny on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/sunny-sourav-81a992192"
+              class="hoverline" target="_blank">linkedin.com/in/sunny-sourav-81a992192</a></a>
         </p>
       </div>
     </section>
