--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 <img alt="" src="/assets/img/truffle-logo.png" class="responsive-img" />Truffle/Hardhat
               </div>
                <div class="col s4 m2">
-                <img alt="" src="/assets/img/react.png" class="responsive-img" />Reactjs
+                <img alt="" src="/assets/img/react-logo.png" class="responsive-img" />Reactjs
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/typescript-logo.png" class="responsive-img" />Typescript
