--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/javascript-logo.png" class="responsive-img" />Javascript
+                <img alt="" src="/assets/img/javascript-logo.png" class="responsive-img" />
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/solidity-logo.jpg" class="responsive-img" />Solidity
