--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
               <h2>Hi, I'm <span class="teal">Sunny Sourav.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5> self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
               <h5>Love to discuss amazing ideas with similar minds</h5>
+              <h5>Worked on different web2 web apps </h5>
+              <h5>Learning and working on blockchain </h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/sunny-sourav-81a992192" target="_blank">
