--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 <span class="card-title activator teal-text hoverline">Brokedown<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Provide service and solution
+                  Provide service and solution based on user current location
                 </p>
               </div>
               <div class="card-reveal">
