--- a/index.html
+++ b/index.html
@@ -597,8 +597,7 @@
                 <span class="card-title activator teal-text hoverline">Employee management<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Employees management application focus on posting opening, getting resume, biometric integration for employees attendance, leave management,
-                  user task and work hour monitoring and many other features
+                  Employees management application focus on attendance, leaves & other features
                 </p>
               </div>
               <div class="card-reveal">
