--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Event" src="/assets/img/employee-management.webp" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Event" src="/assets/img/management.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Employee management<i
@@ -609,6 +609,47 @@
                   <li>Multiple roles Admin, Manager, Lead , Employees</li>
                   <li>Employess can request for leave and Lead approves & same goes for Lead to manager</li>
                   <li>Dashboard to check employess leave, work hours and other details</li>
+                </ul>
+                <div class="card-action">
+<!--                   <a aria-label="Visit " href="https://www.brokedown.org/" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a> -->
+<!--                   <a aria-label="Visit the GitHub repo for  project" href=""
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Event" src="/assets/img/employee-management.webp" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Appointment<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Appointment booking application based on user geolocation
+                </p>
+              </div>
+              <div class="card-reveal">
+               
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> Python, Django, DRF, javascript, Stripe, Push notification. </li>
+                  <li>Two roles Professionals, Users, Admin</li>
+                  <li>The professionals who will give appointment to user</li>
+                  <li>The user who will be scheduling the appointments with professionals</li>
+                  <li>The user can find professionals based on their need and request for the appointment on particular date and time, the 
+                  professional can accept/decline/reschedule the appointment</li>
+                  <li>Dashboard to see upcoming appointments</li>
+                  <li>Push notification , payment/invoice generation incase opted online</li>
+                  <li>
                 </ul>
                 <div class="card-action">
 <!--                   <a aria-label="Visit " href="https://www.brokedown.org/" target="_blank" data-position="top"
