--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Event" src="/assets/img/management.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Event" src="/assets/img/emp-management.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Employee management<i
