--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Sunny Sourav | Full stack Developer</title>
+  <title>Sunny Sourav | Full Stack Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>-->
@@ -35,16 +35,16 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Sunny Sourav | Full stack Developer" />
-  <meta property="og:description" content="Full stack Developer" />
+  <meta property="og:title" content="Sunny Sourav | Full Stack Developer" />
+  <meta property="og:description" content="Full Stack Developer" />
   <meta property="og:url" content="https://itssunny322.github.io/" />
-  <meta property="og:site_name" content="Sunny Sourav | Full stack Developer" />
+  <meta property="og:site_name" content="Sunny Sourav | Full Stack Developer" />
   <meta property="article:publisher" content="https://itssunny322.github.io/" />
   <meta property="og:image" content="https://itssunny322.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@sunny66245077" />
-  <meta name="twitter:title" content="Developer | Blockchain | Wanderlust | Minimalist | Humane" />
+  <meta name="twitter:title" content="Developer | Blockchain | Wanderlust | Blogger" />
   <meta name="twitter:description" content="Full stack Developer" />
   <meta name="twitter:url" content="https://twitter.com/sunny66245077" />
   <meta name="author" content="Sunny Sourav" />
@@ -159,7 +159,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Sunny
-        Sourav</a><span class="black-text">Full stack Developer</span>
+        Sourav</a><span class="black-text">Full Stack Developer</span>
     </div>
   </nav>
 
@@ -215,7 +215,7 @@
               <h5> self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
               <h5>Love to discuss amazing ideas with similar minds</h5>
               <h5>Worked on different web2, we3 web apps </h5>
-              <h5>Learning and working on blockchain </h5>
+              <h5>Learning and working on Blockchain </h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/sunny-sourav-81a992192" target="_blank">
@@ -265,7 +265,7 @@
           
 
         <p>
-          Looking for an opportunity to work in a some interesting Blockchain projects, which provides professional development, interesting experiences and personal growth.
+          Looking for an opportunity to work in some interesting Blockchain projects, which provides professional development, interesting experiences and personal growth.
         </p>
 
       </div>
@@ -299,7 +299,7 @@
                 Developed and managed the backend as well as frontend for a e-commerce platform and kanban board using Django & Reactjs.
               </li>
               <li>
-                Worked on three blockchain projects DeFi yield farming app, NFT MarketPlace, Crosschan token transfer in polygon.
+                Worked on three blockchain projects DeFi yield farming app, NFT MarketPlace, Crosschain token transfer in polygon.
               </li>
               <li>Made smart contract added automated marketmaker for yield farming, added price oracle to fetch real time value of tokens, react app with web3 integration.</li>
               <li>Made smart contract, deployed over ropsten testnet, audited the code using slither,echidna,manticore,solhint, made reactjs application and integrated using web3/etherjs .</li>
