--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <ul>
                   <li><b>Tools:</b> Solidity, Ethereum, Polygon, Javascript, Reactjs, web3, etherjs</li>
                   <li>Metamask based authentication</li>
-                  <li>Depositior can deposit various crypto coin/token and start earning interest</li>
+                  <li>Depositor can deposit various crypto coin/token and start earning interest</li>
                   <li>Realtime pricefeed from price oracle</li>
                   <li>Borrower can deposit collateral and get loan</li>
                 </ul>
