--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <div class="role brown-text text-darken-2">Python full stack Developer</div>
             <ul>
               <li>
-                Developed a project siliar to justdial in which we can view the services nearby according to our need and according to our location,added Google API,IP based location, Social login and much more.
+                Developed a project similar to justdial in which we can view the services nearby according to our need and according to our location,added Google API,IP based location, Social login and much more.
               </li>
               <li>
                 Developed APIs for for anonymous social web app, which include chat, like, comment, post stories, delete stories and much more.
