--- a/index.html
+++ b/index.html
@@ -144,9 +144,7 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-        <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
-          onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
+        
         <a aria-label="Open Varad's resume in a new tab" href="https://github.com/itssunny322/itssunny322.github.io/blob/master/assets/resume/Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
@@ -192,11 +190,11 @@
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
-      <li class="bold">
+<!--       <li class="bold">
         <a aria-label="Open Sunnys's Resume in a new tab"
-          href="https://drive.google.com/file/d/1buKHIGdDjjiI9rIduvu0JVDLeLYCyiV5/view?usp=sharing" target="_blank"
+          href="" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
