--- a/index.html
+++ b/index.html
@@ -135,19 +135,10 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
 
-      <li class="bold">
-        <!--
-        ICONS:
-        1. mdi-action-description
-        2. mdi-file-folder
-        3. mdi-file-folder-open
-        4. mdi-file-attachment
-        5. mdi-file-folder-shared
-        -->
-        
-        <a aria-label="Open Varad's resume in a new tab" href="https://github.com/itssunny322/itssunny322.github.io/blob/master/assets/resume/Resume.pdf" target="_blank"
+<!--       <li class="bold">
+        <a aria-label="Open Sunnys's resume in a new tab" href="https://github.com/itssunny322/itssunny322.github.io/blob/master/assets/resume/Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
-      </li>
+      </li> -->
     </ul>
   </nav>
 
