--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5> self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
               <h5>Love to discuss amazing ideas with similar minds</h5>
-              <h5>Worked on different web2, we3 web apps </h5>
+              <h5>Worked on different web2, web3 web apps </h5>
               <h5>Learning and working on Blockchain </h5>
             </div>
             <div class="social">
