--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <meta name="twitter:description" content="Full stack Developer" />
   <meta name="twitter:url" content="https://twitter.com/sunny66245077" />
   <meta name="author" content="Sunny Sourav" />
-  <meta name="description" content="Software Developer worked in both web2 and web3 environment." />
+  <meta name="description" content="Software Developer worked in both web2 and   environment." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
