--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
 
-<!--       <li class="bold">
+      <li class="bold">
         <a aria-label="Open Sunnys's resume in a new tab" href="https://github.com/itssunny322/itssunny322.github.io/blob/master/assets/resume/Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
-      </li> -->
+      </li>
     </ul>
   </nav>
 
@@ -181,11 +181,12 @@
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
-<!--       <li class="bold">
+      <li class="bold">
         <a aria-label="Open Sunnys's Resume in a new tab"
-          href="" target="_blank"
+          href="https://drive.google.com/file/d/1buKHIGdDjjiI9rIduvu0JVDLeLYCyiV5/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
-      </li> -->
+      </li>
+
     </ul>
   </nav>
 
