--- a/index.html
+++ b/index.html
@@ -659,13 +659,13 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Event" src="/assets/img/pet.jpeg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Event" src="/assets/img/pet.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Pet Meet App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Pet meeting application based on geolocation
+                  Pet meeting application based on geolocation with in-app chat feature
                 </p>
               </div>
               <div class="card-reveal">
