--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Sunnys's Resume in a new tab"
-          href="https://drive.google.com/file/d/1buKHIGdDjjiI9rIduvu0JVDLeLYCyiV5/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1jvEZfrEAz3eRc_I6SAxHTGh3mR7NbZSK/view" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
 
